# kallos

./: .gitignore  Cargo.toml  README.md  pixi.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/kallos/: Cargo.toml
crates/kallos-cli/: Cargo.toml
crates/kallos-cli/src/: cli.rs  discover.rs  lib.rs  main.rs  outcome.rs  process.rs  run.rs
crates/kallos-cli/tests/: cli.rs
crates/kallos-doc/: Cargo.toml
crates/kallos-doc/benches/: render_linearity.rs
crates/kallos-doc/src/: arena.rs  builder.rs  lib.rs  render.rs
crates/kallos/benches/: pipeline.rs
crates/kallos/src/: comments.rs  cst.rs  equiv.rs  fusion.rs  lib.rs  style.rs  test_support.rs
crates/kallos/src/emit/: assemble.rs  constructs.rs  embedded.rs  mod.rs  reinject.rs  spacing.rs  token.rs
crates/kallos/tests/: corpus.rs  differential.rs  golden.rs  public_api.rs
crates/kallos/tests/common/: mod.rs
crates/kallos/tests/corpus/clingofmt/: NOTICE  inc1_includes.lp  inc2_includes_then_fact.lp  inc3_includes_then_show.lp  inc4_includes_then_rule.lp  inc5_includes_comment_rule.lp  pn02_line_comment.lp  pn03_two_comments.lp  pn04_block_comment.lp  pn05_fact.lp  pn06_fact_trailing_comment.lp  pn07_comment_then_rule.lp  pn08_fact_block.lp  pn09_block_comment_facts.lp  pn10_inline_block_comment.lp  pn11_two_fact_blocks.lp
tests/differential/: canonical.py
